[gd_scene load_steps=14 format=3 uid="uid://6i6yh1tiycmt"]

[ext_resource type="Script" path="res://Base.gd" id="1_asqr1"]
[ext_resource type="Script" path="res://GameManager.gd" id="1_er8mo"]
[ext_resource type="Script" path="res://TimeScale.gd" id="2_r60f2"]
[ext_resource type="Script" path="res://WaveManager.gd" id="3_sjgfr"]
[ext_resource type="PackedScene" uid="uid://db1xxjnsoxss6" path="res://basic.tscn" id="4_qnt7u"]
[ext_resource type="PackedScene" uid="uid://bwc1i6myddq0d" path="res://speedy.tscn" id="5_hsbw5"]
[ext_resource type="PackedScene" uid="uid://bc2nx44jw4f0n" path="res://easy_mode.tscn" id="6_i2gm1"]
[ext_resource type="PackedScene" uid="uid://cty70vo8qkw5f" path="res://zickey.tscn" id="7_ufg46"]
[ext_resource type="PackedScene" uid="uid://ch5s0twkoxwvc" path="res://DEBUG.tscn" id="9_h2sms"]
[ext_resource type="Script" path="res://TowerRegistry.gd" id="10_erg5a"]
[ext_resource type="PackedScene" uid="uid://dvbmgppw84ix5" path="res://Scout.tscn" id="11_pbg38"]
[ext_resource type="Script" path="res://MoneyManager.gd" id="12_jkxa6"]
[ext_resource type="Script" path="res://console.gd" id="13_w67di"]

[node name="GameManager" type="Node"]
script = ExtResource("1_er8mo")

[node name="Base" type="Node" parent="."]
script = ExtResource("1_asqr1")
max_hp = 100
temp_shield = 5

[node name="TimeScaleManager" type="Node" parent="."]
script = ExtResource("2_r60f2")

[node name="WaveManager" type="Node" parent="." node_paths=PackedStringArray("current_game_mode")]
script = ExtResource("3_sjgfr")
current_game_mode = NodePath("../Easy")
basic = ExtResource("4_qnt7u")
speedy = ExtResource("5_hsbw5")
zickey = ExtResource("7_ufg46")

[node name="Easy" parent="." instance=ExtResource("6_i2gm1")]

[node name="DEBUG" parent="." instance=ExtResource("9_h2sms")]

[node name="TowerRegistry" type="Node" parent="."]
script = ExtResource("10_erg5a")
towers = Array[PackedScene]([ExtResource("11_pbg38"), ExtResource("11_pbg38"), ExtResource("11_pbg38"), ExtResource("11_pbg38"), ExtResource("11_pbg38")])

[node name="MoneyManager" type="Node" parent="." node_paths=PackedStringArray("money_display")]
script = ExtResource("12_jkxa6")
money_display = NodePath("../Label")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "$100
"

[node name="Console" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("13_w67di")
